修复Windows批处理脚本编码问题
主要更改：
1. 删除有编码问题的 run-with-javafx.bat
2. 创建简化的 start.bat 脚本
3. 创建 start-cli.bat 命令行版本脚本
4. 添加 QUICK_FIX.md 快速修复指南
5. 更新 README.md 使用新的脚本

解决方案：
- 使用简化的批处理脚本避免编码问题
- 提供直接的命令行运行方式
- 包含详细的故障排除步骤